crates/mssql-client/tests/compile-fail-state/query_on_disconnected.stderr
error[E0599]: no method named `query` found for mutable reference `&mut Client<mssql_client::Disconnected>` in the current scope
 --> tests/compile-fail-state/query_on_disconnected.rs:6:20
  |
6 |     let _ = client.query("SELECT 1", &[]);
  |                    ^^^^^ method not found in `&mut Client<Disconnected>`
